--- a/src/GUI/Pagos/Pagos.form
+++ b/src/GUI/Pagos/Pagos.form
@@ -485,17 +485,23 @@
             <Component class="javax.swing.JTable" name="tablePagos">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="6" rowCount="4">
+                  <Table columnCount="7" rowCount="0">
                     <Column editable="false" title="ID" type="java.lang.Object"/>
                     <Column editable="true" title="Monto" type="java.lang.Object"/>
                     <Column editable="true" title="Fecha Pago" type="java.lang.Object"/>
                     <Column editable="true" title="M&#xe9;todo Pago" type="java.lang.Object"/>
                     <Column editable="true" title="Concepto" type="java.lang.Object"/>
+                    <Column editable="true" title="Id Cliente" type="java.lang.Object"/>
                     <Column editable="false" title="Cliente" type="java.lang.Object"/>
                   </Table>
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                   <TableColumnModel selectionModel="0">
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                      <Title/>
+                      <Editor/>
+                      <Renderer/>
+                    </Column>
                     <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                       <Title/>
                       <Editor/>
